--- a/index.html
+++ b/index.html
@@ -56,5 +56,94 @@
         <td><a href="./jstask8.html">Task8</a></td>
       </tr>
     </table>
+    <hr />
+    <h1>HTML Tasks</h1>
+    <table>
+      <tr>
+        <th>Task</th>
+        <th>Links</th>
+      </tr>
+      <tr>
+        <td>Task1</td>
+        <td><a href="./htmltask1.html">Task1</a></td>
+      </tr>
+      <tr>
+        <td>Task2</td>
+        <td><a href="./htmltask2.html">Task2</a></td>
+      </tr>
+      <tr>
+        <td>Task3</td>
+        <td><a href="./htmltask3.html">Task3</a></td>
+      </tr>
+      <tr>
+        <td>Task4</td>
+        <td><a href="./htmltask4.html">Task4</a></td>
+      </tr>
+      <tr>
+        <td>Task5</td>
+        <td><a href="./htmltask5.html">Task5</a></td>
+      </tr>
+    </table>
+    <hr />
+    <h1>CSS Tasks</h1>
+    <table>
+      <tr>
+        <th>Task</th>
+        <th>Links</th>
+      </tr>
+      <tr>
+        <td>Task1</td>
+        <td><a href="./csstask1.html">Task1</a></td>
+      </tr>
+      <tr>
+        <td>Task2</td>
+        <td><a href="./csstask2.html">Task2</a></td>
+      </tr>
+      <tr>
+        <td>Task3</td>
+        <td><a href="./csstask3.html">Task3</a></td>
+      </tr>
+      <tr>
+        <td>Task4</td>
+        <td><a href="./csstask4.html">Task4</a></td>
+      </tr>
+      <tr>
+        <td>Task5</td>
+        <td><a href="./csstask5.html">Task5</a></td>
+      </tr>
+    </table>
+    <hr />
+    <h1>Bootstrap Tasks</h1>
+    <table>
+      <tr>
+        <th>Task</th>
+        <th>Links</th>
+      </tr>
+      <tr>
+        <td>Task1</td>
+        <td><a href="./bstask1.html">Task1</a></td>
+      </tr>
+      <tr>
+        <td>Task2</td>
+        <td><a href="./bstask2.html">Task2</a></td>
+      </tr>
+      <tr>
+        <td>Task3</td>
+        <td><a href="./bstask3.html">Task3</a></td>
+      </tr>
+      <tr>
+        <td>Task4</td>
+        <td><a href="./bstask4.html">Task4</a></td>
+      </tr>
+      <tr>
+        <td>Task5</td>
+        <td><a href="./bstask5.html">Task5</a></td>
+      </tr>
+      <tr>
+        <td>Task6</td>
+        <td><a href="./bstask6.html">Task6</a></td>
+      </tr>
+    </table>
+    <hr />
   </body>
 </html>
